@@ -1,3 +1,8 @@
+2007-03-28  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* src/callbacks.c: (on_about_activate):
+        BUGZILLA: #421922 - cryptic license tab 
+
 2007-03-12  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* src/baobab-prefs.c: (create_props_model), (create_tree_props),
